--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8088
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://124.71.235.52:3306/db_oasys?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://localhost:3307/db_oasys?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf-8
-spring.datasource.username=zzh
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/db_oasys?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=dhyzzh
 
 
 
@@ -13,9 +13,12 @@ spring.datasource.password=123456
 #attachment.root.path=/Users/
 
 #Windows path
-file.root.path=E:/oa_system/resources/static/file
-img.root.path=E:/oa_system/resources/static/image
-attachment.root.path=E:/oa_system/resources/static/attachment
+#file.root.path=E:/oa_system/resources/static/file
+#img.root.path=E:/oa_system/resources/static/image
+#attachment.root.path=E:/oa_system/resources/static/attachment
+file.root.path=static/file
+img.root.path=static/image
+attachment.root.path=static/attachment
 
 #Linux path
 #file.root.path=/home/oa_system/resources/static/file
